objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>Agent_Response_Time_Hours__c</fullName>
        <description>Calculates the number of hours from when an agent accepts a case until the first email is sent. Intended to be used in conjunction with Agent Response Time Minutes.</description>
        <formula>VALUE(
IF( Status_for_Formulas__c = &quot;Sent&quot;, 

IF( 
FLOOR((  MessageDate  -  Parent.In_Progress_Start_Time__c  )*24) &gt; 9, 
TEXT(FLOOR(( MessageDate  -  Parent.In_Progress_Start_Time__c )* 24)), 
&quot;0&quot; &amp; TEXT(FLOOR(( MessageDate  -  Parent.In_Progress_Start_Time__c )*24)) 
),

null

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Response Time Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Response_Time_Minutes__c</fullName>
        <description>Calculates the number of minutes from when an agent accepts a case until the first email is sent. Intended to be used in conjunction with Agent Response Time Hours.</description>
        <formula>VALUE(
IF( Status_for_Formulas__c = &quot;Sent&quot;, 

IF( 
ROUND(MOD((MessageDate  -  Parent.In_Progress_Start_Time__c  )*1440,60),0) &gt; 9, 
TEXT(ROUND(MOD(( MessageDate  -  Parent.In_Progress_Start_Time__c )* 1440,60),0)), 
&quot;0&quot; &amp; TEXT(ROUND(MOD(( MessageDate  -  Parent.In_Progress_Start_Time__c )*1440,60),0)) 
),

null

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Response Time Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Turn_Time_Hours__c</fullName>
        <description>Calculates the number of hours from when a case is opened until the first email is sent. Intended to be used in conjunction with Email Turn Time Minutes.</description>
        <formula>VALUE(
IF( Status_for_Formulas__c = &quot;Sent&quot;,  

IF(
FLOOR(( MessageDate -  Parent.CreatedDate )*24 ) &gt; 9,
TEXT(FLOOR(( MessageDate -  Parent.CreatedDate )*24)),
&quot;0&quot; &amp; TEXT(FLOOR(( MessageDate -  Parent.CreatedDate )*24))),

null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Turn Time Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Turn_Time_Minutes__c</fullName>
        <description>Calculates the number of minutes from when a case opens until the first email is sent. Intended to be used in conjunction with Email Turn Time Minutes.</description>
        <formula>VALUE(
IF ( Status_for_Formulas__c = &quot;Sent&quot;,

IF(
ROUND(MOD(( MessageDate -  Parent.CreatedDate )*1440,60),0) &gt; 9,
TEXT(ROUND(MOD(( MessageDate -  Parent.CreatedDate )*1440,60),0)),
&quot;0&quot; &amp; TEXT(ROUND(MOD(( MessageDate -  Parent.CreatedDate )*1440,60),0))),

null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Turn Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_for_Formulas__c</fullName>
        <description>A field that stores email status that can be used in formulas because Email Status cannot be used easily in formulas.</description>
        <formula>CASE(Status, 
&quot;New&quot;, &quot;New&quot;, 
&quot;Read&quot;, &quot;Read&quot;, 
&quot;Replied&quot;, &quot;Replied&quot;, 
&quot;Sent&quot;, &quot;Sent&quot;, 
&quot;Forwarded&quot;, &quot;Forwarded&quot;, 
&quot;Draft&quot;, &quot;Draft&quot;, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for Formulas</label>
        <type>Text</type>
    </fields>
</CustomObject>